<resources>
    <string name="app_name">OneWalk</string>

    <string name="fui_name_hint" translation_description="Hint for last name input field">Nickname (max 12 char.)</string>
    <string name="steps">&#160;&#160;Steps</string>

    <!-- Login strings -->
    <string name="signin_failed">Failed sign in</string>
    <string name="signout_failed">Failed sign out</string>
    <string name="unknown_response">Error!! ): </string>
    <string name="passed">Success!!</string>

    <!-- Nav bar fragment title strings -->
    <string name="title_quest">Quests</string>
    <string name="title_shop">Shop</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_settings">Settings</string>

    <!-- Today strings -->
    <string name="Username">Username</string>
    <string name="title_today">Today</string>
    <string name="total_steps">Total Steps Walked</string>
    <string name="currency_title">Gary Bucks</string>
    <string name="greeting">Good Afternoon, UserNickname.</string>
    <string name="greeting_message">It\'s a good day to take a walk.</string>
    <string name="steps_no_space">Steps</string>
    <string name="challenger_title">Daily Challenger</string>
    <string name="challenger_nickname">UserNickname</string>

    <!-- Settings strings -->
    <string name="view_profile">View Profile</string>
    <string name="nickname_text">Change NickName</string>
    <string name="edit_privacy">Privacy</string>
    <string name="about_one_walk">About One Walk</string>
    <string name="logout_text">Logout</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="signout">Logged Out</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account? This will erase all data linked to your account.</string>
    <string name="delete_account_success">Account Deleted</string>
    <string name="delete_account_failed">Delete Account Failed</string>

    <!-- Body shop strings -->
    <string name="shop_body">Body</string>
    <string name="body_title">Body Shop</string>
    <string name="body_0">Cowboy Body</string>
    <string name="body_1">Magician Body</string>
    <string name="body_2">Jojo Body</string>
    <string name="body_3">Earth Body</string>
    <string name="body_4">Chef Body</string>
    <string name="body_5">Viking Body</string>
    <string name="body_6">Striped Body</string>
    <string name="body_7">Yellow Robe Body</string>
    <string name="body_8">Lee Body</string>
    <string name="body_9">Gary Body</string>

    <!-- Hat shop strings -->
    <string name="shop_hat">Hats</string>
    <string name="hat_title">Hat Shop</string>
    <string name="hat_0">Baseball Hat</string>
    <string name="hat_1">Magician Hat</string>
    <string name="hat_2">Pirate Hat</string>
    <string name="hat_3">Tree Hat</string>
    <string name="hat_4">Poop Hat</string>
    <string name="hat_5">Cowboy Hat</string>
    <string name="hat_6">Chef Hat</string>
    <string name="hat_7">Konoha Hat</string>
    <string name="hat_8">Viking Hat</string>
    <string name="hat_9">Leprechaun Hat</string>
    <string name="hat_10">Earth Hat</string>
    <string name="hat_11">Jojo Hat</string>
    <string name="hat_12">Duck Hat</string>

    <!-- Change nickname strings -->
    <string name="ask_new_nickname">New Display Name:</string>
    <string name="changed_nickname">Name changed to:</string>

    <!-- Privacy strings -->
    <string name="title_privacy">Privacy</string>
    <string name="privacy_leaderboard">Appear on leaderboard</string>
    <string name="privacy_steps">Show steps on leaderboard</string>

    <!-- Profile strings -->
    <string name="total_curr">Total # of Gary Bucks</string>
    <string name="total_hats">Hats Owned</string>
    <string name="total_bodies">Bodies Owned</string>
    <string name="total_quests">Quests Completed</string>
    <string name="total_days">Total # of Days Walked</string>

    <!-- Quest strings -->
    <string name="instructions">Walk around in your daily life and everytime you meet the step requirement you\'ll gain Gary Bucks! \n\n Happy walking!</string>
    <string name="daily_challenge">Daily Challenge</string>
    <string name="reward">Reward</string>

    <!-- About strings -->
    <string name="version">Version 1.1</string>
    <string name="mission">Take walking to the next level with OneWalk. Walk with a purpose from now on. OneWalk will help you feel better in game and in real life. \n Challenge yourself now!"</string>
    <string name="creator_title">Creators:</string>
    <string name="creator_names">Rahul Shenoy \nAlexander Lo\nElaine Hsieh\nShengzhi Wang\nSergio Villazon\nAlexander Zhu\nConnie Guan\nJungyong Yi\nKimberly Li\nDavid Liau</string>
</resources>
