<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_quest"
        android:icon="@drawable/nav_quest"
        android:title="@string/title_quest" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/nav_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/nav_today"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_leader_board"
        android:icon="@drawable/nav_leaderboard"
        android:title="@string/title_leaderboard" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/nav_setting"
        android:title="@string/title_settings" />

</menu>
