<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/layout_bg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.506"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <!-- An invisible view aligned to the center of the parent. Allows other
    views to be arranged on either side -->
    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/abouttext"
        android:layout_width="183dp"
        android:layout_height="101dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#666"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@drawable/ic_appiconv4svg" />

    <TextView
        android:id="@+id/versionnumber"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/Figma"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        android:textColor="#777"
        android:lineSpacingMultiplier="1.08"
        android:text="@string/mission"
        android:textAlignment="center"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/creatorText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/creatorList"
        android:layout_alignParentStart="true"
        android:text="@string/creator_title"
        android:textAlignment="center"
        android:textColor="#777"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/creatorList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="21dp"
        android:textColor="#777"
        android:text="@string/creator_names"
        android:textAlignment="center"
        android:textSize="12dp" />


</RelativeLayout>