<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/today_background"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.506"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:elevation="10dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowSpan="1"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text=""
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- An invisible view aligned to the center of the parent. Allows other
    views to be arranged on either side -->
    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/centerShim"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/name"
        android:gravity="center"
        android:text="@string/total_steps"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_step_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/centerShim"
        android:gravity="center"
        android:text="0"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/total_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerShim"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/total_curr"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_currency_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerShim"
        android:layout_below="@+id/total_currency"
        android:gravity="center_horizontal"
        android:text="0"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/hatsOwned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/centerShim"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/total_step_count"
        android:gravity="center"
        android:text="@string/total_hats"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_hats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hatsOwned"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/centerShim"
        android:gravity="center"
        android:text="0"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/bodiesOwned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_currency_count"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerShim"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/total_bodies"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/total_bodies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerShim"
        android:layout_below="@+id/bodiesOwned"
        android:gravity="center_horizontal"
        android:text="0"
        android:textSize="40sp" />
</RelativeLayout>